Agregado front con nginx

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -48,3 +48,12 @@ services:
       - ./DB/sqlserver:/docker-entrypoint-initdb.d
     networks:
       - ventas_network
+      
+  frontend:
+    build: ./frontend
+    ports:
+      - "8080:80"
+    depends_on:
+      - backend
+    networks:
+      - ventas_network
